--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_100">#E1BEE7</color>
+    <color name="light_blue_300">#03A9F4</color>
+    <color name = "red_300">#F44336</color>
+    <color name="grey_200">#BDBDBD</color>
+    <color name="grey_400">#757575</color>
 </resources>
