--- a/app/src/main/res/layout/activity_background.xml
+++ b/app/src/main/res/layout/activity_background.xml
@@ -32,6 +32,7 @@
         app:layout_constraintVertical_bias="0.33" />
 
     <include
+        android:id="@+id/include"
         layout="@layout/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -40,5 +41,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnSnackbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_snackbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnWhite" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
